--- a/CarGarage/WebContent/WEB-INF/web.xml
+++ b/CarGarage/WebContent/WEB-INF/web.xml
@@ -32,9 +32,10 @@
   </listener>
   
   <resource-ref>
-      <description>Student Datasource</description>
+      <description>Car Datasource</description>
       <res-ref-name>jdbc/garage</res-ref-name>
       <res-type>javax.sql.DataSource</res-type>
       <res-auth>Container</res-auth>
   </resource-ref>
+  
 </web-app>
